--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "file-loader": "^2.0.0",
     "immutable": "^3.8.2",
@@ -23,6 +23,7 @@
     "mobx-react": "^5.2.8",
     "prop-types": "^15.5.8",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.3.10",
     "react-router": "^4.3.1",
