--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,18 @@
     "prod": "webpack --config webpack.config.prod.babel.js --mode production"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.1.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "clsx": "^1.0.4",
     "file-loader": "^2.0.0",
     "immutable": "^3.8.2",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.19.4",
+    "material-ui-popup-state": "^1.4.0",
     "mobx": "^5.1.2",
     "mobx-react": "^5.2.8",
     "prop-types": "^15.5.8",
